# janitor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql.yml  pytest.yml
janitor/: checksumutils.py  crawler.py  gatherers.py  index.py  indexer.py  main.py  notes.py  pandocutils.py  typerutils.py  util.py
tests/: crawler_test.py  index_test.py  indexer_test.py  janitor_test.py  main_test.py  notes_test.py  typerutils_test.py  util_test.py
tests/notes/: note1.md  note2.md  note3.md  note4.md
