[tool.poetry]
name = "janitor"
version = "0.1.0"
description = "A program for performing checks on, and enhancing, markdown notes."
authors = ["Arjun Patel <relay-git-1LKQ1GqLp0Nn4@aspatel.com>"]
license = "MIT"

[tool.poetry.scripts]
janitor = "janitor.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pandoc = "^2.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
