[tool.poetry]
name = "janitor"
version = "0.1.0"
description = "A program for performing checks on, and enhancing, markdown notes."
authors = ["Arjun Patel <relay-git-1LKQ1GqLp0Nn4@aspatel.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/apatel762/janitor"

[tool.poetry.scripts]
janitor = "janitor.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pandoc = "^2.2"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
